@@ -2,6 +2,7 @@ Changelog for Babel.
 
 Babel 3.0.0-dev
 =====================================
+- [#108] fix context's link then there's no translation on &includeUnlinked=`1` option
 - [#106] fix resource selection when selecting empty text (&nbsp;)
 
 Babel 3.0.0-beta3 (February 14, 2015)
